--- a/index.html
+++ b/index.html
@@ -310,12 +310,13 @@
 
 					<div class="icon-middle">
 						<div class="icon-size font-button"></div>
-						<div class="nav-size font-button">字体</div>
-					</div>
-					<div class="icon-middle-click" style= "display:none">
-						<div class="icon-size-click"></div>
 						<div class="nav-size">字体</div>
 					</div>
+					<div class="icon-middle-click " style="display:none">
+						<div class="icon-size-click font-button"></div>
+						<div class="nav-size">字体</div>
+					</div>
+
 					<!--字体操作面板-->
 					  <!--操作面板背景-->
 					<div class="nav-pannel-bk font-container" style= "display:none"></div>
@@ -384,7 +385,8 @@
 						foot_nav: $('.foot-nav'),
 						night_day_switch_button: $('.icon-right-night'),
 						font_button: $('.font-button'),
-						font_container: $('.font-container')
+						font_container: $('.font-container'),
+						icon_middle_click: $('.icon-middle-click')
 					}
 					var Win = $(window);
 					var Doc = $(document);
@@ -404,6 +406,7 @@
 
 					function EventHanlder() {
 						//交互的事件绑定
+						//点击屏幕中间显示上下边栏
 						$('#action_mid').click(function() {
 							if(Dom.top_nav.css('display') == 'none'){
 								Dom.top_nav.show();
@@ -413,15 +416,21 @@
 								Dom.foot_nav.hide();
 							}
 						});
+						//点击字体后颜色切换且显示菜单
 						Dom.font_button.click(function() {
 							if(Dom.font_container.css('display') == 'none'){
 								Dom.font_container.show();
-								Dom.font_container.show();
+								Dom.font_button.addClass('icon-middle-click');
+								if(Dom.icon_middle_click.css('display') == 'none'){
+									Dom.icon_middle_click.show();
+								}
 							}else{
-								Dom.font_container.hide();
+								Dom.icon_middle_click.hide();
+								Dom.font_button.removeClass('icon-middle-click');
 								Dom.font_container.hide();
 							}
 						});
+
 						Dom.night_day_switch_button.click(function() {
 							//  触发背景切换的事件
 						});
