--- a/index.html
+++ b/index.html
@@ -304,8 +304,9 @@
 			position: fixed;
 			z-index: 10002;
 			width: 100%;
-			height: 40%;
+			height: 35%;
 			top: 30%;
+			margin: auto;
 		}
 		</style>
 	</head>
@@ -426,6 +427,7 @@
 						night_day_switch_button: $('.icon-right-night'),
 						font_button: $('.font-button'),
 						font_container: $('.font-container'),
+						icon_middle: $('.icon-middle'),
 						icon_middle_click: $('.icon-middle-click'),
 						large_font: $('#large-font'),
 						small_font: $('#small-font'),
@@ -506,6 +508,7 @@
 								Dom.font_button.addClass('icon-middle-click');
 								if(Dom.icon_middle_click.css('display') == 'none'){
 									Dom.icon_middle_click.show();
+									Dom.icon_middle.hide();
 								}
 								//圆圈自动出现
 								if(newInitBackground === initBackground[0]) {
@@ -520,6 +523,7 @@
 									Dom.bk_container_current_5.show();
 								}
 							}else{
+								Dom.icon_middle.show();
 								Dom.icon_middle_click.hide();
 								Dom.font_button.removeClass('icon-middle-click');
 								Dom.font_container.hide();
@@ -540,7 +544,7 @@
 						});
 						Dom.small_font.click(function() {
 							initFontSize -= 1;
-							if(initFontSize < 10) {
+							if(initFontSize < 12) {
 								return;
 							}
 							Dom.m_read_content.css('font-size', initFontSize);
