--- a/index.html
+++ b/index.html
@@ -509,6 +509,9 @@
 								if(Dom.icon_middle_click.css('display') == 'none'){
 									Dom.icon_middle_click.show();
 									Dom.icon_middle.hide();
+								}else{
+									Dom.icon_middle_click.hide();
+									Dom.icon_middle.show();
 								}
 								//圆圈自动出现
 								if(newInitBackground === initBackground[0]) {
