--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
       font-size: 12px;
       background: #000;
       opacity: 0.9;
-			z-index: 21000;
     }
     .u-tab li {
       display: inline-block;
@@ -54,7 +53,6 @@
       border-right: 1px solid #858382;
       text-align: center;
       color: #fff;
-			z-index: 21000;
     }
 
     .u-tab li:nth-child(2) {
@@ -65,6 +63,8 @@
       max-width: 800px;
       padding: 5px;
       margin: 0 auto;
+			z-index: 99999;
+			position: relative;
     }
     .top-nav {
       position: fixed;
@@ -305,13 +305,12 @@
 		}
 		.artical-action-mid {
 			position: fixed;
-			z-index: 10002;
+			z-index: 10001;
 			width: 100%;
 			height: 35%;
 			top: 30%;
 			margin: auto;
 		}
-
 		</style>
 	</head>
 	<body>
@@ -320,7 +319,6 @@
 			<div class="m-artical-action">
 				<!--中间-->
 				<div class="artical-action-mid" id="action_mid"></div>
-
 			</div>
 
       <!--上边栏-->
@@ -331,10 +329,7 @@
       <!--文章标题-->
       <div id="fiction_chapter_title"></div>
         <!--文章内容-->
-        <div id="fiction_container" class="m-read-content">
-
-        </div>
-
+        <div id="fiction_container" class="m-read-content"></div>
         <!--尾部按钮-->
         <div class="m-button-bar">
           <ul class="u-tab">
